--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,47 @@
     <title>Upload PDF</title>
 </head>
 <body>
-    <h1>Upload PDF para Extração de Tabelas</h1>
-    <form method="post" action="/enviar" enctype="multipart/form-data">
-        <label for="arquivo">Escolha o arquivo PDF:</label>
-        <input type="file" name="arquivo" id="file" accept=".pdf" required>
-        <br><br>
-        <button type="submit">Enviar e Baixar Excel</button>
-    </form>
+    <nav class="nav-bar">
+        <div class="content">
+            <div class="logo">
+                <img src="/static/imagens/mv5.png" alt="">
+            </div>
+            <div class="texto">
+                <h1>MEMORIAL DIAGNOSTICO</h1>
+            </div>
+            <div class="logo2">
+                <img src="/static/imagens/MV4.png" alt="">
+            </div>
+        </div>
+    </nav>
+    
+    <div class="branco"></div>
+
+    <div class="titulo">
+        <h1>Conversao da planilha FUSEX</h1>
+    </div>
+    
+    <main>
+        <div class="img">
+            <img src="/static/imagens/marizinha.png" alt="">
+        </div>
+
+        <div class="documento">
+            <form method="post" action="/enviar" enctype="multipart/form-data">
+                <label for="arquivo">
+                    <h1>Escolha o arquivo PDF:</h1>
+                </label>
+                <input type="file" name="arquivo" id="file" accept=".pdf" required>
+                <br><br>
+                <button type="submit">Enviar e Baixar Excel</button>
+            </form>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2023 - Desenvolvido por Maylson</p>
+        </div>
+    </footer>
 </body>
 </html>
